# test_DIT

./: .env_example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
app/: config.py  main.py  tasks.py
app/api/: exceptions.py
app/api/api_v1/routers/: images.py  tasks.py
app/api/schemas/: images.py
app/services/: image_service.py  url_service.py
celery_app/: Dockerfile  calculate_workers.py  start_celery.py
docker_compose/: app.yaml
